<resources>
    <string name="app_name">Firebase App</string>
    <string name="title_item_detail">Person Detail</string>

    <string name="name">%1$s %2$s</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="zip_code">Zip Code:</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="zip_code_hint">Zip Code</string>

    <string name="person_added">%1$s added</string>
    <string name="person_updated">%1$s updated</string>
    <string name="person_removed">%1$s removed</string>

    <!--Warnings-->
    <string name="invalid_person">You need to supply at least a first name</string>

</resources>
